--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -139,6 +139,8 @@ spec:
                 type: array
               lastSyncError:
                 type: string
+              rdmaMode:
+                type: string
               syncStatus:
                 type: string
             type: object
