--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
     steps:
 
     - name: Set up Go 1.x
@@ -26,3 +26,9 @@ jobs:
 
     - name: fmt
       run: IS_CONTAINER=yes make fmt
+
+    - name: test pkg
+      run: make test-pkg
+    
+    - name: test controllers on opensfhit
+      run: CLUSTER_TYPE=openshift make test-controllers
