--- a/.github/workflows/lgtm-merger.yml
+++ b/.github/workflows/lgtm-merger.yml
@@ -1,17 +1,17 @@
 name: "Merge on lgtm label"
 on:
-  schedule:
-    - cron: "*/20 * * * *"
+  workflow_run:
+    workflows: ["Go", "Pull Request Labeler"]
+    types:
+      - completed
+      - requested
 
 jobs:
-  execute:
+  label:
     runs-on: ubuntu-latest
-    needs:
-      - build
-      - test
     steps:
-      - uses: jpmcb/prow-github-actions@v1.1.2
+      - uses: mheap/github-action-required-labels@v1.1.2
         with:
-          jobs: 'lgtm'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-          merge-method: 'squash'
+          mode: exactly
+          count: 1
+          labels: "lgtm"
