--- a/Dockerfile.sriov-network-config-daemon
+++ b/Dockerfile.sriov-network-config-daemon
@@ -12,4 +12,5 @@ COPY --from=builder /go/src/github.com/k8snetworkplumbingwg/sriov-network-operat
 COPY --from=builder /go/src/github.com/k8snetworkplumbingwg/sriov-network-operator/build/_output/pkg/plugins /plugins
 COPY bindata /bindata
 ENV PLUGINSPATH=/plugins
+ENV CLUSTER_TYPE=kubernetes
 CMD ["/usr/bin/sriov-network-config-daemon"]
