--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -35,6 +35,8 @@ spec:
               value: $SRIOV_CNI_IMAGE
             - name: SRIOV_INFINIBAND_CNI_IMAGE
               value: $SRIOV_INFINIBAND_CNI_IMAGE
+            - name: SRIOV_INFINIBAND_CNI_ENABLE
+              value: $SRIOV_INFINIBAND_CNI_ENABLE
             - name: SRIOV_DEVICE_PLUGIN_IMAGE
               value: $SRIOV_DEVICE_PLUGIN_IMAGE
             - name: NETWORK_RESOURCES_INJECTOR_IMAGE
