Change CRD domain from openshift.io to k8s.cni.cncf.io
k8s.cni.cncf.io is a vendor neutral domain already used in other
network-related projects.

Fixes: #78
Signed-off-by: Michal Rostecki <mrostecki@opensuse.org>

--- a/bindata/manifests/operator-webhook/002-rbac.yaml
+++ b/bindata/manifests/operator-webhook/002-rbac.yaml
@@ -47,7 +47,7 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - "sriovnetwork.openshift.io"
+  - "sriovnetwork.k8s.cni.cncf.io"
   resources:
   - "*"
   verbs:
