--- a/config/crd/patches/cainjection_in_sriovnetworks.yaml
+++ b/config/crd/patches/cainjection_in_sriovnetworks.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: sriovnetworks.sriovnetwork.openshift.io
+  name: sriovnetworks.sriovnetwork.k8s.cni.cncf.io
