--- a/config/crd/patches/webhook_in_sriovnetworknodepolicies.yaml
+++ b/config/crd/patches/webhook_in_sriovnetworknodepolicies.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sriovnetworknodepolicies.sriovnetwork.openshift.io
+  name: sriovnetworknodepolicies.sriovnetwork.k8s.cni.cncf.io
 spec:
   conversion:
     strategy: Webhook
