--- a/config/manifests/bases/sriov-network-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/sriov-network-operator.clusterserviceversion.yaml
@@ -15,27 +15,27 @@ spec:
     - description: SriovOperatorConfig is the Schema for the sriovoperatorconfigs API
       displayName: Sriov Operator Config
       kind: SriovOperatorConfig
-      name: sriovoperatorconfigs.sriovnetwork.openshift.io
+      name: sriovoperatorconfigs.sriovnetwork.k8s.cni.cncf.io
       version: v1
     - description: SriovNetwork is the Schema for the sriovnetworks API
       displayName: Sriov Network
       kind: SriovNetwork
-      name: sriovnetworks.sriovnetwork.openshift.io
+      name: sriovnetworks.sriovnetwork.k8s.cni.cncf.io
       version: v1
     - description: SriovIBNetwork is the Schema for the sriovibnetworks API
       displayName: Sriov IBNetwork
       kind: SriovIBNetwork
-      name: sriovibnetworks.sriovnetwork.openshift.io
+      name: sriovibnetworks.sriovnetwork.k8s.cni.cncf.io
       version: v1
     - description: SriovNetworkNodePolicy is the Schema for the sriovnetworknodepolicies API
       displayName: Sriov Network Node Policy
       kind: SriovNetworkNodePolicy
-      name: sriovnetworknodepolicies.sriovnetwork.openshift.io
+      name: sriovnetworknodepolicies.sriovnetwork.k8s.cni.cncf.io
       version: v1
     - description: SriovNetworkNodeState is the Schema for the sriovnetworknodestates API
       displayName: Sriov Network Node State
       kind: SriovNetworkNodeState
-      name: sriovnetworknodestates.sriovnetwork.openshift.io
+      name: sriovnetworknodestates.sriovnetwork.k8s.cni.cncf.io
       version: v1
   description: Sriov Network Operator description. TODO.
   displayName: Sriov Network Operator
