--- a/config/rbac/sriovibnetwork_editor_role.yaml
+++ b/config/rbac/sriovibnetwork_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sriovibnetwork-editor-role
 rules:
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovibnetworks
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovibnetworks/status
   verbs:
