--- a/config/rbac/sriovnetworknodepolicy_editor_role.yaml
+++ b/config/rbac/sriovnetworknodepolicy_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sriovnetworknodepolicy-editor-role
 rules:
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovnetworknodepolicies
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovnetworknodepolicies/status
   verbs:
