--- a/config/rbac/sriovnetworknodepolicy_viewer_role.yaml
+++ b/config/rbac/sriovnetworknodepolicy_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sriovnetworknodepolicy-viewer-role
 rules:
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovnetworknodepolicies
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - sriovnetwork.openshift.io
+  - sriovnetwork.k8s.cni.cncf.io
   resources:
   - sriovnetworknodepolicies/status
   verbs:
