--- a/config/samples/sriovnetwork_v1_sriovnetwork.yaml
+++ b/config/samples/sriovnetwork_v1_sriovnetwork.yaml
@@ -1,4 +1,4 @@
-apiVersion: sriovnetwork.openshift.io/v1
+apiVersion: sriovnetwork.k8s.cni.cncf.io/v1
 kind: SriovNetwork
 metadata:
   name: sriovnetwork-sample
