--- a/deployment/sriov-network-operator/templates/role.yaml
+++ b/deployment/sriov-network-operator/templates/role.yaml
@@ -73,7 +73,7 @@ rules:
     verbs:
       - '*'
   - apiGroups:
-      - sriovnetwork.openshift.io
+      - sriovnetwork.k8s.cni.cncf.io
     resources:
       - '*'
       - sriovnetworknodestates
