--- a/manifests/4.7/sriov-network-operator-sriovnetworknodestate.crd.yaml
+++ b/manifests/4.7/sriov-network-operator-sriovnetworknodestate.crd.yaml
@@ -4,9 +4,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
-  name: sriovnetworknodestates.sriovnetwork.openshift.io
+  name: sriovnetworknodestates.sriovnetwork.k8s.cni.cncf.io
 spec:
-  group: sriovnetwork.openshift.io
+  group: sriovnetwork.k8s.cni.cncf.io
   names:
     kind: SriovNetworkNodeState
     listKind: SriovNetworkNodeStateList
