--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    workload.openshift.io/allowed: "management"
   labels:
     control-plane: controller-manager
   name: system
@@ -19,6 +21,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
       labels:
         control-plane: controller-manager
     spec:
