--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -9,6 +9,8 @@ spec:
       name: sriov-network-operator
   template:
     metadata:
+      annotations:
+        workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
       labels:
         name: sriov-network-operator
     spec:
