--- a/manifests/4.7/sriov-network-operator.v4.7.0.clusterserviceversion.yaml
+++ b/manifests/4.7/sriov-network-operator.v4.7.0.clusterserviceversion.yaml
@@ -294,6 +294,8 @@ spec:
               name: sriov-network-operator
           template:
             metadata:
+              annotations:
+                workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
               labels:
                 name: sriov-network-operator
             spec:
