Add RDMAExclusiveMode field to SriovNetworkPoolConfig CRD
RDMAExclusiveMode field holds policy for RDMA mode
configuration on nodes.

Add NodeSettings field to SriovNetworkNodeStateSpec.
This field is updated by SriovNetworkPoolConfig controller.
After update config daemon will apply required configuration
changes.

Signed-off-by: Yury Kulazhenkov <ykulazhenkov@nvidia.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -73,6 +73,12 @@ spec:
                   - pciAddress
                   type: object
                 type: array
+              nodeSettings:
+                description: NodeSettings defines node level configuration options
+                properties:
+                  rdmaExclusiveMode:
+                    type: boolean
+                type: object
             type: object
           status:
             description: SriovNetworkNodeStateStatus defines the observed state of
@@ -141,6 +147,12 @@ spec:
                 type: array
               lastSyncError:
                 type: string
+              nodeSettings:
+                description: NodeSettings defines node level configuration options
+                properties:
+                  rdmaExclusiveMode:
+                    type: boolean
+                type: object
               syncStatus:
                 type: string
             type: object
