--- a/deploy/configmap.yaml
+++ b/deploy/configmap.yaml
@@ -23,3 +23,4 @@ data:
   Broadcom_bnxt_BCM75508_2x100G: "14e4 1750 1806"
   Qlogic_qede_QL45000_50G: "1077 1654 1664"
   Red_Hat_Virtio_network_device: "1af4 1000 1000"
+  Pensando_ionic_DSC: "1dd8 1002 1003"
