--- a/bindata/manifests/webhook/server.yaml
+++ b/bindata/manifests/webhook/server.yaml
@@ -44,15 +44,10 @@ spec:
         {{ end }}
       tolerations:
       {{ if not .ExternalControlPlane }}
-      - key: "node-role.kubernetes.io/master"
-        operator: Exists
+      - operator: Exists
         effect: NoSchedule
-      - key: "node-role.kubernetes.io/control-plane"
-        operator: Exists
-        effect: NoSchedule
-      - key: "node.kubernetes.io/not-ready"
-        operator: Exists
-        effect: NoSchedule
+      - operator: Exists
+        effect: NoExecute
       {{ end }}
       {{- if .ImagePullSecrets }}
       imagePullSecrets:
