Support Graceful Shutdown
If the kubelet where the the sriov pod is running has gracefulShutdown
configured, we'll delay in preStop for a while if and while /tmp/sriov-delay-shutdown
exists, up to a maximum wait of 10 minutes (less than the 15 minutes which is specified in
the daemonset pod's terminationGracePeriodSeconds).

--- a/bindata/manifests/daemon/daemonset.yaml
+++ b/bindata/manifests/daemon/daemonset.yaml
@@ -93,6 +93,7 @@ spec:
         volumeMounts:
         - name: cnibin
           mountPath: /host/opt/cni/bin
+      terminationGracePeriodSeconds: 900
       volumes:
       - name: host
         hostPath:
