--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -50,6 +50,8 @@ spec:
                   properties:
                     eSwitchMode:
                       type: string
+                    externallyCreated:
+                      type: boolean
                     linkType:
                       type: string
                     mtu:
@@ -125,6 +127,8 @@ spec:
                       type: string
                     eSwitchMode:
                       type: string
+                    externallyCreated:
+                      type: boolean
                     linkSpeed:
                       type: string
                     linkType:
