Add AllMuticast mode support
The sriov cni has a new option to enable allmulticast mode on the VF.
These changes allows users to enable this mode via the SriovNetwork object.

Signed-off-by: Marcelo Guerrero <marguerr@redhat.com>

--- a/bindata/manifests/cni-config/sriov-cni-config.yaml
+++ b/bindata/manifests/cni-config/sriov-cni-config.yaml
@@ -22,6 +22,9 @@ spec:
 {{- if .TrustConfigured -}}
   "trust":"{{.SriovCniTrust}}",
 {{- end -}}
+{{- if .AllMulticastConfigured -}}
+  "all_multicast":"{{.SriovCniAllMulticast}}",
+{{- end -}}
 {{- if .VlanQoSConfigured -}}
   "vlanQoS":{{.SriovCniVlanQoS}},
 {{- end -}}
