Add `NUMANode` to node state
Add and populate the field
`SriovNetworkNodeState.Status.Interfaces[].NUMANode`
so that the user knows which NUMA node every device is installed in.

Signed-off-by: Andrea Panattoni <apanatto@redhat.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -139,6 +139,8 @@ spec:
                       type: string
                     numVfs:
                       type: integer
+                    numaNode:
+                      type: integer
                     pciAddress:
                       type: string
                     totalvfs:
