--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -19,6 +19,9 @@ spec:
     - jsonPath: .status.syncStatus
       name: Sync Status
       type: string
+    - jsonPath: .metadata.annotations.sriovnetwork\.openshift\.io/current-state
+      name: Current Sync State
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
