--- a/.github/workflows/image-push-release.yml
+++ b/.github/workflows/image-push-release.yml
@@ -12,11 +12,14 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      - name: Login to Docker
-        uses: docker/login-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -24,18 +27,22 @@ jobs:
 
       - name: Docker meta
         id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
-          tag-latest: false
-
-      - name: Build and push sriov-network-operator
-        uses: docker/build-push-action@v2
+          images: ghcr.io/${{ steps.repo_name.outputs.repository }}
+          tags: |
+            type=ref,event=tag
+          flavor: |
+            latest=false
+      - name: Build and push container image
+        uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
           file: ./Dockerfile
 
   build-and-push-image-config-daemon:
@@ -46,11 +53,14 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      - name: Login to Docker
-        uses: docker/login-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -58,18 +68,22 @@ jobs:
 
       - name: Docker meta
         id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
-          tag-latest: false
-
-      - name: Build and push sriov-network-operator-config-daemon
-        uses: docker/build-push-action@v2
+          images: ghcr.io/${{ steps.repo_name.outputs.repository }}
+          tags: |
+            type=ref,event=tag
+          flavor: |
+            latest=false
+      - name: Build and push sriov-network-config-daemon image
+        uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
           file: ./Dockerfile.sriov-network-config-daemon
 
   build-and-push-image-webhook:
@@ -80,11 +94,14 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      - name: Login to Docker
-        uses: docker/login-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -92,16 +109,21 @@ jobs:
 
       - name: Docker meta
         id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        uses: docker/metadata-action@v4
         with:
-          images: ${{ env.IMAGE_NAME }}
-          tag-latest: false
+          images: ghcr.io/${{ steps.repo_name.outputs.repository }}
+          tags: |
+            type=ref,event=tag
+          flavor: |
+            latest=false
 
-      - name: Build and push sriov-network-operator-webhook
-        uses: docker/build-push-action@v2
+      - name: Build and push webhook image
+        uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
           file: ./Dockerfile.webhook
