--- a/config/crd/bases/sriovnetwork.openshift.io_sriovibnetworks.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovibnetworks.yaml
@@ -71,6 +71,9 @@ spec:
               scanGUIDs:
                 description: Whether to scan for GUIDs.
                 type: boolean
+              InterfaceName:
+                description: Name of the IB interface
+                type: string
             required:
             - resourceName
             type: object
