--- a/.github/workflows/chart-push-release.yml
+++ b/.github/workflows/chart-push-release.yml
@@ -9,7 +9,7 @@ on:
       - v*
 jobs:
   package-and-push-helm-chart:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: install helm
         uses: azure/setup-helm@v4.2.0
