drain: adding 'USE_EXTERNAL_DRAINER' provoding an option to enable/disable SRIOV OP drain controller, in favor of using maintenance OP to drive node drain aspects
Signed-off-by: Ido Heyvi <iheyvi@nvidia.com>

--- a/deployment/sriov-network-operator-chart/values.yaml
+++ b/deployment/sriov-network-operator-chart/values.yaml
@@ -42,6 +42,9 @@ operator:
       serviceAccount: "prometheus-k8s"
       namespace: "monitoring"
       deployRules: false
+  # use external drain controller, for example utilizing NVIDIA maintenance operator
+  externalDrainer:
+    enabled: false
   admissionControllers:
     enabled: false
     networkPolicy:
