feat: support disable plugins via helm
Signed-off-by: Fred Rolland <frolland@nvidia.com>

--- a/deployment/sriov-network-operator-chart/templates/sriovoperatorconfig.yaml
+++ b/deployment/sriov-network-operator-chart/templates/sriovoperatorconfig.yaml
@@ -14,6 +14,12 @@ spec:
   logLevel: {{ .Values.sriovOperatorConfig.logLevel }}
   disableDrain: {{ .Values.sriovOperatorConfig.disableDrain }}
   configurationMode: {{ .Values.sriovOperatorConfig.configurationMode }}
+  {{- with .Values.sriovOperatorConfig.disablePlugins }}
+  disablePlugins:
+    {{- range . }}
+    - {{ . }}
+    {{- end }}
+  {{- end }}
   {{- with .Values.sriovOperatorConfig.featureGates }}
   featureGates:
     {{- range $k, $v := .}}{{printf "%s: %t" $k $v | nindent 4 }}{{ end }}
