Add support for network interface alternative names
This commit adds support for network interface alternative names
(altnames) throughout the SR-IOV Network Operator.

Changes:
- Add AltNames field to InterfaceExt type in the CRD
- Fix netlink library to use correct AltNames field (was AlternativeNames)
- Enhance webhook validation to match pfNames against both primary
  interface names and alternative names
- Add GetAlternativeNames method to netlink library interface
- Add comprehensive unit tests covering both good and bad paths:
  * Matching by primary name
  * Matching by alternative name
  * Multiple alternative names
  * Empty/nil alternative names
  * VF range syntax with alternative names
  * Non-matching names

This allows SR-IOV policies to reference interfaces by their alternative
names, providing more flexibility in interface selection.

Signed-off-by: Carlos Goncalves <cgoncalves@redhat.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -328,6 +328,10 @@ spec:
                         - vfID
                         type: object
                       type: array
+                    altNames:
+                      items:
+                        type: string
+                      type: array
                     deviceID:
                       type: string
                     driver:
