--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -150,6 +150,12 @@ spec:
                   properties:
                     eSwitchMode:
                       type: string
+                    eSwitchParams:
+                      properties:
+                        multiport:
+                          description: enabled multiport eswitch mode
+                          type: boolean
+                      type: object
                     externallyManaged:
                       type: boolean
                     linkType:
