feat: add support for custom env variables for sriov-config-daemon
Add support for custom env variables for sriov-config-daemon. The extra varaibles can be
set in SriovOperatorConfig CR.

Signed-off-by: Yury Kulazhenkov <ykulazhenkov@nvidia.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovoperatorconfigs.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovoperatorconfigs.yaml
@@ -40,6 +40,13 @@ spec:
           spec:
             description: SriovOperatorConfigSpec defines the desired state of SriovOperatorConfig
             properties:
+              configDaemonEnvVars:
+                additionalProperties:
+                  type: string
+                description: |-
+                  ConfigDaemonEnvVars allows to specify custom environment variables
+                  for the sriov-network-config-daemon
+                type: object
               configDaemonNodeSelector:
                 additionalProperties:
                   type: string
