--- a/bindata/manifests/daemon/daemonset.yaml
+++ b/bindata/manifests/daemon/daemonset.yaml
@@ -170,6 +170,10 @@ spec:
             value: "{{.ClusterType}}"
           - name: DEV_MODE
             value: "{{.DevMode}}"
+          {{- range $key, $value := .ConfigDaemonEnvVars }}
+          - name: {{ $key }}
+            value: "{{ $value }}"
+          {{- end }}
         resources:
           requests:
             cpu: 100m
