--- a/deployment/sriov-network-operator-chart/values.yaml
+++ b/deployment/sriov-network-operator-chart/values.yaml
@@ -110,6 +110,8 @@ sriovOperatorConfig:
   disablePlugins: []
   # feature gates to enable/disable
   featureGates: {}
+  # custom environment variables for sriov-network-config-daemon
+  configDaemonEnvVars: {}
 
 # Example for supportedExtraNICs values ['MyNIC: "8086 1521 1520"']
 supportedExtraNICs: []
