feat: add extra env variables support for operator pod
Add operator.extraEnv helm value to allow injecting custom environment
variables into the operator controller container.

Signed-off-by: Yury Kulazhenkov <ykulazhenkov@nvidia.com>

--- a/deployment/sriov-network-operator-chart/values.yaml
+++ b/deployment/sriov-network-operator-chart/values.yaml
@@ -7,6 +7,8 @@ operator:
       operator: "Exists"
       effect: "NoSchedule"
   nodeSelector: {}
+  # custom extra environment variables for the operator container
+  extraEnv: {}
   affinity:
     nodeAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
