generated: update deepcopy, CRDs, and RBAC for conditions support
Update generated files and deployment manifests:

DeepCopy (zz_generated.deepcopy.go):
- Add DeepCopyInto for NetworkStatus with Conditions
- Update DeepCopyInto for all Status types with Conditions
- Handle proper slice copying for Condition fields

CRD Manifests (config/crd/bases/):
- Add conditions schema to all CRD status types
- Add additionalPrinterColumns for condition status display
- Add matchedNodeCount/readyNodeCount to policy and poolconfig CRDs
- Conditions use listType=map with listMapKey=type

Helm Chart CRDs (deployment/sriov-network-operator-chart/crds/):
- Mirror changes from config/crd/bases/

RBAC (deploy/, deployment/sriov-network-operator-chart/templates/):
- Add explicit status subresource permissions for all CRDs
- Add get, patch, update verbs for */status resources
- Required for status controller to update conditions

Signed-off-by: Sebastian Sch <sebassch@gmail.com>

--- a/deployment/sriov-network-operator-chart/templates/clusterrole.yaml
+++ b/deployment/sriov-network-operator-chart/templates/clusterrole.yaml
@@ -32,6 +32,16 @@ rules:
   - apiGroups: ["sriovnetwork.openshift.io"]
     resources: ["*"]
     verbs: ["*"]
+  - apiGroups: ["sriovnetwork.openshift.io"]
+    resources:
+      - "sriovnetworknodepolicies/status"
+      - "sriovnetworks/status"
+      - "sriovnetworkpoolconfigs/status"
+      - "ovsnetworks/status"
+      - "sriovibnetworks/status"
+      - "sriovoperatorconfigs/status"
+      - "sriovnetworknodestates/status"
+    verbs: ["get", "patch", "update"]
   - apiGroups: ["machineconfiguration.openshift.io"]
     resources: ["*"]
     verbs: ["*"]
