--- a/deployment/sriov-network-operator-chart/templates/role.yaml
+++ b/deployment/sriov-network-operator-chart/templates/role.yaml
@@ -103,6 +103,14 @@ rules:
     verbs:
       - '*'
   - apiGroups:
+      - sriovnetwork.openshift.io
+    resources:
+      - sriovnetworknodestates/status
+    verbs:
+      - get
+      - patch
+      - update
+  - apiGroups:
       - security.openshift.io
     resourceNames:
       - privileged
