--- a/deploy/clusterrole.yaml
+++ b/deploy/clusterrole.yaml
@@ -30,6 +30,16 @@ rules:
 - apiGroups: ["sriovnetwork.openshift.io"]
   resources: ["*"]
   verbs: ["*"]
+- apiGroups: ["sriovnetwork.openshift.io"]
+  resources:
+    - "sriovnetworknodepolicies/status"
+    - "sriovnetworks/status"
+    - "sriovnetworkpoolconfigs/status"
+    - "ovsnetworks/status"
+    - "sriovibnetworks/status"
+    - "sriovoperatorconfigs/status"
+    - "sriovnetworknodestates/status"
+  verbs: ["get", "patch", "update"]
 - apiGroups: ["machineconfiguration.openshift.io"]
   resources: ["*"]
   verbs: ["*"]
