--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -96,6 +96,14 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - sriovnetwork.openshift.io
+  resources:
+  - sriovnetworknodestates/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
     - security.openshift.io
   resourceNames:
     - privileged
